--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,9 +330,9 @@ a.blob-btn {
 
 /* line 344, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .blob-btn {
-  z-index: 1;
+  z-index: 0;
   position: relative;
-  padding: 10px 16px;
+  padding: 10px 25px;
   margin-bottom: 10px;
   text-align: center;
   text-transform: uppercase;
@@ -485,38 +485,43 @@ a.blob-btn {
 }
 
 /* line 458, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+.font-size-18 {
+  font-size: 18px;
+}
+
+/* line 462, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-20 {
   font-size: 16px;
 }
 
-/* line 462, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 466, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .bg-cinza {
   background-color: #5c5c5c;
 }
 
-/* line 466, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 470, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-cinza {
   color: #5c5c5c;
 }
 
-/* line 470, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 474, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 a.link-index,
 a.link-no-line {
   text-decoration: none;
 }
 
-/* line 475, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 479, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .plano {
   box-shadow: 8px 8px 10px -3px #007bffb3;
 }
 
-/* line 479, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 483, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .larger-checkbox {
   width: 20px;
   height: 20px;
 }
 
-/* line 485, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 489, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda {
   width: 300px;
   height: 150px;
@@ -526,14 +531,14 @@ a.link-no-line {
   box-sizing: border-box;
 }
 
-/* line 494, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 498, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-espessura {
   border-style: solid;
   border-color: #5ccc3a;
   border-width: 30px;
 }
 
-/* line 500, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 504, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-solid {
   width: 300px;
   height: 50px;
@@ -542,7 +547,7 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 508, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 512, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-groove {
   width: 300px;
   height: 100px;
@@ -551,7 +556,7 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 516, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 520, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-dotted {
   width: 300px;
   height: 50px;
@@ -560,7 +565,7 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 524, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 528, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .caixa-borda-estilo-inset {
   width: 300px;
   height: 100px;
@@ -569,44 +574,44 @@ a.link-no-line {
   border-color: green;
 }
 
-/* line 533, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 537, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .texto {
   font-size: 1.5em;
   font-family: "Times New Roman", Times, serif;
 }
 
-/* line 538, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 542, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .negrito {
   font-weight: bold;
 }
 
-/* line 542, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 546, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .italico {
   font-style: italic;
 }
 
-/* line 546, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 550, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .formatacao1 {
   text-decoration: underline;
 }
 
-/* line 550, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 554, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .formatacao2 {
   text-decoration: overline;
 }
 
-/* line 554, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 558, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .formatacao3 {
   text-decoration: line-through;
 }
 
-/* line 558, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 562, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .menu-fixed {
   position: fixed;
   z-index: 1;
 }
 
-/* line 563, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 567, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 footer {
   width: 100%;
   position: fixed;
@@ -614,7 +619,7 @@ footer {
   left: 0;
 }
 
-/* line 570, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 574, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 html,
 body .parallax {
   margin: 0;
@@ -622,7 +627,7 @@ body .parallax {
   height: 100%;
 }
 
-/* line 577, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 581, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img1,
 .img2,
 .img3 {
@@ -636,93 +641,93 @@ body .parallax {
   background-attachment: fixed;
 }
 
-/* line 590, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 594, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img1 {
   background-image: url(../../img/fotos/imagem2.jpg);
 }
 
-/* line 594, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 598, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img2 {
   background-color: white;
 }
 
-/* line 598, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 602, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .img3 {
   background-image: url(../../img/fotos/imagem6.jpg);
 }
 
-/* line 602, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 606, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .video-menor {
   max-width: 30%;
 }
 
-/* line 606, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 610, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 p.cor-paragrafo {
   color: black;
 }
 
-/* line 611, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 615, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .contatos {
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
-/* line 616, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 620, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-10 {
   border-radius: 10px;
 }
 
-/* line 620, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 624, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-20,
 .borda-redonda-20-footer {
   border-radius: 20px;
 }
 
-/* line 625, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 629, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-40 {
   border-radius: 40px;
 }
 
-/* line 630, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 634, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 div#mapa {
   float: left;
   width: 310px;
   margin-left: 37px;
 }
 
-/* line 636, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 640, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 div.font-reduzida {
   font-size: 12px;
 }
 
-/* line 640, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 644, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-size-button {
   font-size: 20px;
   padding: 10px 50px;
 }
 
-/* line 645, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 649, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-size-grande {
   font-size: 30px;
 }
 
-/* line 649, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 653, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-size-20 {
   font-size: 20px;
 }
 
-/* line 654, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 658, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch {
   position: relative;
   width: 127px;
 }
 
-/* line 659, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 663, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch input[type=checkbox] {
   display: none;
 }
 
-/* line 663, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 667, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-label {
   display: block;
   overflow: hidden;
@@ -731,14 +736,14 @@ div.font-reduzida {
   border-radius: 19px;
 }
 
-/* line 671, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 675, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner {
   width: 200%;
   margin-left: -100%;
   transition: margin 0.3s ease-in 0s;
 }
 
-/* line 677, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 681, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner:before, .flipswitch-inner:after {
   float: left;
   width: 50%;
@@ -752,7 +757,7 @@ div.font-reduzida {
   box-sizing: border-box;
 }
 
-/* line 690, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 694, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner:before {
   content: "ATIVO";
   padding-left: 20px;
@@ -760,7 +765,7 @@ div.font-reduzida {
   color: #FFFFFF;
 }
 
-/* line 697, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 701, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-inner:after {
   content: "INATIVO";
   padding-right: 20px;
@@ -769,7 +774,7 @@ div.font-reduzida {
   text-align: right;
 }
 
-/* line 705, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 709, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-switch {
   width: 20px;
   margin: 0px;
@@ -783,17 +788,17 @@ div.font-reduzida {
   transition: all 0.3s ease-in 0s;
 }
 
-/* line 718, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 722, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-cb:checked + .flipswitch-label .flipswitch-inner {
   margin-left: 0;
 }
 
-/* line 722, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 726, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .flipswitch-cb:checked + .flipswitch-label .flipswitch-switch {
   right: 0;
 }
 
-/* line 729, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 733, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 body.bg-formatura {
   background-image: url(../../img/portifolio/formatura/formatura.jpg);
   position: relative;
@@ -806,93 +811,93 @@ body.bg-formatura {
   background-attachment: fixed;
 }
 
-/* line 741, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 745, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .text-fasthand {
   font-family: "Fasthand";
   font-size: 40px;
   color: #a71e47;
 }
 
-/* line 748, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 752, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-15 {
   font-size: 15px;
 }
 
-/* line 752, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 756, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-19 {
   font-size: 19px;
 }
 
-/* line 756, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 760, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-20 {
   font-size: 20px;
 }
 
-/* line 760, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 764, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-size-25 {
   font-size: 25px;
 }
 
-/* line 764, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 768, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 textarea {
   overflow: hidden;
   resize: none;
 }
 
-/* line 769, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 773, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .link-visualiza-mensagem,
 .link-visualiza-mensagem:hover,
 .link-visualiza-mensagem:focus {
   text-decoration: none;
 }
 
-/* line 775, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 779, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 span.recuo-primeira-linha,
 .recuo-primeira-linha {
   text-indent: 25px;
 }
 
-/* line 780, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 784, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-10-right {
   border-radius: 0 10px 10px 0;
 }
 
-/* line 784, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 788, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-10-left {
   border-radius: 10px 0 0 10px;
 }
 
-/* line 788, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 792, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-20-right {
   border-radius: 0 20px 20px 0;
 }
 
-/* line 792, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 796, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-20-left {
   border-radius: 20px 0 0 20px;
 }
 
-/* line 796, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 800, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-top-left {
   border-radius: 10px 0 0 0;
 }
 
-/* line 800, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 804, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .borda-redonda-top-right {
   border-radius: 0 10px 0 0;
 }
 
-/* line 804, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 808, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .classVisivel-no {
   display: none;
 }
 
-/* line 808, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 812, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .classVisivel-yes {
   display: contents;
 }
 
-/* line 813, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
+/* line 817, ../../xampp/htdocs/ResolveSystemsOnLine/scss/style.scss */
 .font-link {
   font-size: 25px;
 }
