--- a/scss/style.scss
+++ b/scss/style.scss
@@ -343,9 +343,9 @@ a.blob-btn {
 
 .blob-btn {
 	$numOfBlobs: 4;
-	z-index: 1;
+	z-index: 0;
 	position: relative;
-	padding: 10px 16px;
+	padding: 10px 25px;
 	margin-bottom: 10px;
 	text-align: center;
 	text-transform: uppercase;
@@ -453,6 +453,10 @@ a.blob-btn {
 
 .font-size-16 {
 	font-size: 16px;
+}
+
+.font-size-18 {
+	font-size: 18px;
 }
 
 .font-size-20 {
